2008-10-14  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/theora/theoradec.c: (theora_dec_decode_buffer):
	Fix build on macosx.

2008-10-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	Based on patch by: Robin Stocker <robin at nibor dot org>

	* ext/theora/gsttheoradec.h:
	* ext/theora/theoradec.c: (gst_theora_dec_init),
	(theora_dec_setcaps), (theora_handle_type_packet),
	(theora_dec_decode_buffer), (theora_dec_change_state):
	Parse input caps and make the PAR override the encoded PAR when
	specified by a container. Fixes #555699.

2008-10-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/rtp/gstbasertpdepayload.c:
	(gst_base_rtp_depayload_setcaps), (gst_base_rtp_depayload_chain),
	(gst_base_rtp_depayload_set_gst_timestamp),
	(gst_base_rtp_depayload_change_state):
	* gst-libs/gst/rtp/gstbasertpdepayload.h:
	Add some more G_LIKELY
	Fail when the setcaps function was not called.

	* gst-libs/gst/rtp/gstbasertppayload.c:
	(gst_basertppayload_set_outcaps):
	Propagate return value of setcaps.

2008-10-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/subparse/Makefile.am:
	* gst/subparse/gstsubparse.c: (gst_sub_parse_dispose),
	(gst_sub_parse_class_init), (gst_sub_parse_init),
	(gst_convert_to_utf8), (detect_encoding), (convert_encoding),
	(get_next_line), (gst_sub_parse_data_format_autodetect),
	(feed_textbuf), (handle_buffer), (gst_sub_parse_change_state),
	(gst_subparse_type_find):
	* gst/subparse/gstsubparse.h:
	Add support for UTF16/UTF32 subtitles as long as the first bytes of
	the first buffer contain the BOM. This also adds support for other
	encodings that allow NUL bytes via the encoding property.
	Fixes bugs #552237 and #456788.

2008-10-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst-libs/gst/tag/tags.c: (gst_tag_image_data_to_image_buffer):
	Don't drop the last byte of image tags if they're not an URI list.
	Fixes bug #556066.

2008-10-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
