@@ -1,3 +1,9 @@
+2008-10-15  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* gst/subparse/gstsubparse.c: (gst_subparse_type_find):
+	Improve typefinding a bit. If we don't have a Unicode charset
+	try GST_SUBTITLE_ENCODING and otherwise try ISO-8859-15.
+
 2008-10-14  Edward Hervey  <edward.hervey@collabora.co.uk>
 
 	* ext/theora/theoradec.c: (theora_dec_decode_buffer):
